# to-do-list

./: CMakeLists.txt  LICENSE  README.md  secrets.txt
GUI/src/gui-initalizer/: guiinitializer.cpp  guiinitializer.hpp
GUI/src/objects/include/: Task.hpp  TasksMangmentObject.hpp  correctnessinputerror.h
GUI/src/qml/: main.qml  qml.qrc
GUI/src/qml/Button/: AddButton.qml
GUI/src/qml/TaskInput/: TaskInput.qml
GUI/src/qml/utils/: checkDate.js  checkEmail.js  checkTime.js
GUI/src/services/: loadTasks.js  saveTasks.js
GUI/src/utils/: gui_helper.hpp
GUI/src/wrappers/: taskstoragewrapper.cpp  taskstoragewrapper.hpp  taskwrapper.cpp  taskwrapper.hpp
curl-wrapper/: CMakeLists.txt
curl-wrapper/src/: CMakeLists.txt  curlFactory.cpp  curlFactory.hpp  curlexceptions.hpp  httpcode.hpp  httprequest.cpp  httprequest.hpp  uri.cpp  uri.hpp  uribuilder.cpp  uribuilder.hpp
curl-wrapper/test/: CMakeLists.txt  testdb.json  uribuildertest.cpp  urirequesttest.cpp
docker/: Dockerfile
gui/src/: CMakeLists.txt
gui/src/gui-initalizer/: guiinitializer.cpp  guiinitializer.hpp  loginintalizer.cpp  loginintalizer.hpp
gui/src/qml/: login.qml  main.qml  qml.qrc
gui/src/qml/CheckBox/: CheckBox.qml
gui/src/qml/utils/: getIso.js
gui/src/utils/: gui_helper.hpp
gui/src/wrappers/: loaderwrapper.cpp  loaderwrapper.hpp  taskchannel.cpp  taskchannel.hpp  taskstoragewrapper.cpp  taskstoragewrapper.hpp  taskwrapper.cpp  taskwrapper.hpp
main/: CMakeLists.txt  main.cpp
plugin-support/src/: CMakeLists.txt  own_deleter.hpp  pluginhcommunicatorwrapper.cpp  pluginhcommunicatorwrapper.hpp  plugininterface.cpp  plugininterface.hpp  pluginloader.cpp  pluginloader.hpp  supportfunctions.hpp
plugins/: CMakeLists.txt
plugins-api/: CMakeLists.txt  api-version.h.in  pluginaddressvalidator.hpp  pluginapierrorcodes.hpp  plugincommuincator.hpp  pluginconnectioninfo.hpp  pluginfacade.hpp
plugins-api/export/: pluginaddressvalidator.hpp  pluginapierrorcodes.hpp  plugincommuincator.hpp  pluginfacade.hpp
plugins-api/inner/: plugindef.hpp
plugins/googlecalendar-plugin/: CMakeLists.txt  desc.json.in  googleaddressvalidator.cpp  googleaddressvalidator.hpp  googlecalendarcommunicator.cpp  googlecalendarcommunicator.hpp  googlecalendarfacade.cpp  googlecalendarfacade.hpp  googlecalendarplugin.cpp  googlecalendarplugin.hpp
plugins/googlecalendar-plugin/googlecalendar-communication/src/: calendaraouth.cpp  calendaraouth.hpp  calendarapi.cpp  calendarapi.hpp
plugins/googlecalendar-plugin/googlecalendar-communication/test/: CMakeLists.txt  aothTest.cpp
plugins/googlecalendar-plugin/googlecalender-communication/src/: calendaraouth.cpp  calendaraouth.hpp  calendarapi.cpp  calendarapi.hpp
tasks/src/: CMakeLists.txt
tasks/src/adapters/: pluginAdapter.cpp  pluginAdapter.hpp
tasks/src/containers/: storages.cpp  storages.hpp
tasks/src/core-initializer/: coreinitializer.cpp  coreinitializer.hpp
tasks/src/interfaces/: AbstractCoreInitializer.hpp  abstractedCommunicationadabter.hpp
tasks/src/persistent_storage/: store_helpers.hpp  taskmarsheller.cpp  taskmarsheller.hpp
tasks/src/primitives/: task.cpp  task.hpp
tasks/test/: CMakeLists.txt  taskmarshellertest.cpp  tasksavingtest.cpp
utils/src/: CMakeLists.txt  dbFactory.cpp  dbFactory.hpp  storage.hpp
utils/test/: CMakeLists.txt  storagetest.cpp
